Time: 1 ms (94.46%), Space: 44.7 MB (21.19%) - LeetHub